# clvis-chlg-2023

./: .gitignore  check_benchmark.py  environment.yml  makefile  plot_augmentation.py  plot_class_distribution.py  plot_features.py  pyproject.toml  train.py  train_baseline.py  train_non_cl_baseline.py
benchmarks/: __init__.py  cir_benchmark.py
data/: challenge_test_labels.pkl
doc/: method.md  thoughts.md
exp/: config.yaml  search_space.json
models/: __init__.py  hat_resnet_18.py  resnet_18.py  utils.py
scripts/: cross_entropy_loss.py  k_means.py
strategies/: base.py  classification.py  readme.md  sup_contrast.py
utils/: competition_plugins.py  generic.py  get_ckpt_dir_path.py  lars.py  params.py
